# cads-adaptors

./: .cruft.json  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg  test.ipynb
.github/workflows/: main.yaml  on-push.yml
cads_adaptors/: __init__.py  adaptor.py  adaptor_cds.py  adaptor_multi.py  adaptor_utils.py  cds_adaptor.py  constraints.py  costing.py  exceptions.py  hcube_tools.py  intake_utils.py  mapping.py  models.py  translators.py  url_tools.py
cads_adaptors/adaptor/: cds.py  legacy.py  mars.py  multi.py  url.py
cads_adaptors/adaptor/insitu/: db_dataset.py  glamod_db.py
cads_adaptors/adaptor/insitu/tools/: insitu_utils.py
cads_adaptors/adaptors/: __init__.py  arco.py  cadsobs.py  cds.py  legacy.py  mars.py  multi.py  url.py
cads_adaptors/adaptors/cadsobs/: adaptor.py  api_client.py  char_utils.py  codes.py  constants.py  csv.py  filter.py  models.py  retrieve.py  utils.py
cads_adaptors/adaptors/cams_regional_fc/: __init__.py  api_retrieve.py  area_subset.py  assert_valid_grib.py  cacher.py  cams_regional_fc.py  convert_grib.py  convert_grib_to_netcdf.py  create_file.py  exceptions.py  formats.py  grib2request.py  mem_safe_queue.py  meteo_france_retrieve.py  nc_request_groups.py  preprocess_requests.py  process_grib_files.py  remote_copier.py  subrequest_main.py  which_fields_in_file.py
cads_adaptors/adaptors/cams_regional_fc/config/: regional_fc_definitions.yaml
cads_adaptors/adaptors/cams_solar_rad/: __init__.py  functions.py
cads_adaptors/adaptors/daily-statistics/: adaptor.py
cads_adaptors/adaptors/daily_statistics/: __init__.py  adaptor.py
cads_adaptors/adaptors/eumdac/: __init__.py
cads_adaptors/adaptors/insitu/: __init__.py  db_dataset.py  glamod_db.py
cads_adaptors/adaptors/insitu/insitu_lib/: baron_csv_cdm.py  csvlev2obs.py  insitu_utils.py
cads_adaptors/adaptors/insitu/tools/: csvlev2obs.py  insitu_utils.py
cads_adaptors/adaptors/mars/: client.py  request.json  request2.json
cads_adaptors/adaptors/roocs/: __init__.py  operators.py
cads_adaptors/adaptors/solrad/: __init__.py
cads_adaptors/tools/: __init__.py  _unused_methods.py  adaptor_tools.py  area_selector.py  constraint_tools.py  convertors.py  date_tools.py  download_tools.py  general.py  hcube_tools.py  logger.py  post_processors.py  simulate_preinterpolation.py  snap_area.py  temporal_statistics.py  url_tools.py
cads_adaptors/tools/insitu_lib/: __init__.py  baron_csv_cdm.py  insitu_legacy.py  insitu_utils.py
cads_adaptors/tools/insitu_lib/converters/: __init__.py  csv2netcdf.py  csv2odb.py  dbdataset2netcdf.py
cads_adaptors/validation/: enforce.py  error_message.py  fix_errors.py  fixers.py  get_validator.py
cads_retrieve_tools/: cache.py  date_tools.py  hcube_tools.py  mapping.py  url_tools.py
ci/: condaenv.cgc80oug.requirements.txt  environment-ci.yml  environment-integration.yml
docs/: adaptors.md  conf.py  index.md
docs/notebooks/: adaptor-debug.ipynb  grib_to_netcdf.ipynb
tests/: conftest.py  test_00_exposed_methods.py  test_00_version.py  test_05_exceptions.py  test_10_adaptor_tools.py  test_10_cache_tmp_path.py  test_10_constraints.py  test_10_costing.py  test_10_datetools.py  test_10_download_tools.py  test_10_dummy_adaptor.py  test_10_general_tools.py  test_10_hcube_tools.py  test_10_mapping.py  test_10_tags.py  test_10_tools.py  test_10_validation_enforce.py  test_11_adaptor_tools.py  test_14_abstract_cds.py  test_15_adaptor_multi.py  test_15_mars.py  test_20_adaptor_multi.py  test_20_constraint_tools.py  test_20_url_tools.py  test_25_adaptor_multi.py  test_25_mars.py  test_30_area_selector.py  test_30_convertors.py  test_40_post_processors.py  test_50_arco_adaptor.py  test_50_cadsobs_adaptor.py  test_50_daily_statistics_adaptor.py  test_50_url_adaptor.py  test_60_area_snap.py  test_60_daily_stats_adaptors.py  test_60_simulate_preinterp.py  test_70_cams_solar_timeseries.py  test_cadsobs_adaptor.py
tests/data/: mars_servers.list
