[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "ecmwflibs",
  "cfgrib",
  "cacholote",
  "multiurl>=0.2.3.2",
  "rooki",
  "python-dateutil"
]
description = "CADS data retrieve utilities to be used by adaptors"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-adaptors"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = true
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cdsapi",
  "multiurl"
]

[tool.ruff]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: 1 blank line required between summary line and description
  "D205",
  # pydocstyle: First line should be in imperative mood; try rephrasing
  "D401"
]
# Black line length is 88, but black does not format comments.
line-length = 110
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_adaptors"]

[tool.setuptools_scm]
write_to = "cads_adaptors/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
