[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "ecmwflibs",
  "ek-aggregate",
  "cfgrib",
  "cacholote",
  "multiurl>=0.3.1",
  "rooki",
  "python-dateutil",
  "pyyaml",
  "tqdm",
  "DateTimeRange",
  "cads-mars-server@git+https://github.com/ecmwf-projects/cads-mars-server.git"
]
description = "CADS data retrieve utilities to be used by adaptors"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-adaptors"
readme = "README.md"

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = true
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cdsapi",
  "multiurl"
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: 1 blank line required between summary line and description
  "D205",
  # pydocstyle: First line should be in imperative mood; try rephrasing
  "D401"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_adaptors"]

[tool.setuptools_scm]
write_to = "cads_adaptors/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
