[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  # Only mandatory dependencies required by the broker and retrieve-api images
  "cryptography",
  "DateTimeRange",
  "python-dateutil",
  "structlog",
  "jsonschema"
]
description = "CADS data retrieve utilities to be used by adaptors"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "cads-adaptors"
readme = "README.md"

[project.optional-dependencies]
complete = [
  # Additional dependencies required by the worker image
  "aiohttp",
  "boto3",
  "cacholote",
  "cads-mars-server@git+https://github.com/ecmwf-projects/cads-mars-server.git",
  "cdsapi>=0.7.6",
  "cfgrib>=0.9.14.0",
  "cftime",
  "dask",
  "ecmwflibs",
  "earthkit-transforms>=0.5.2",
  "fsspec",
  "h5netcdf",
  "jinja2",
  "multiurl>=0.3.6",
  "netcdf4",
  "numpy",
  "pandas",
  "pydantic",
  "python-dateutil",
  "pyyaml",
  "requests",
  "rooki",
  "sqlalchemy",
  "tabulate",
  "tqdm",
  "xarray",
  "zarr"
]
tests = [
  "pytest",
  "pytest-cov"
]

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = true
strict = false

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cdsapi",
  "multiurl"
]

[tool.ruff]
# Same as Black.
indent-width = 4
line-length = 88

[tool.ruff.lint]
ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: 1 blank line required between summary line and description
  "D205",
  # pydocstyle: First line should be in imperative mood; try rephrasing
  "D401"
]
select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.ruff.lint.pycodestyle]
max-line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.setuptools]
packages = ["cads_adaptors"]

[tool.setuptools_scm]
fallback_version = "999"
write_to = "cads_adaptors/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
